--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
             <div class="linkcard">
               <div>📄</div>
               <div>
-                <div><strong>Paper draft</strong></div>
-                <a href="#" aria-disabled="true" title="available on request">Available on request</a>
+                <div><strong>Paper (under review in nature communications)</strong></div>
+                <a href="https://osf.io/preprints/psyarxiv/6c8gf_v2" aria-disabled="true" title="available on request">Link</a>
               </div>
             </div>
             <div class="linkcard" style="margin-top:8px;">
               <div>🧪</div>
               <div>
-                <div><strong>Methods & stimuli</strong></div>
-                <a href="#" aria-disabled="true" title="available on request">Available on request</a>
+                <div><strong>Stimuli</strong></div>
+                <a href="https://github.com/shravan1394/WinogradDataset" aria-disabled="true" title="available on request">Link</a>
               </div>
             </div>
           </div>
@@ -182,7 +182,7 @@
             <div class="linkcard" style="margin-top:8px;">
               <div>🗂️</div>
               <div>
-                <div><strong>CSB dataset (teaser)</strong></div>
+                <div><strong>CSB dataset</strong></div>
                 <a href="#" aria-disabled="true" title="available on request">Available on request</a>
               </div>
             </div>
@@ -206,6 +206,13 @@
             <div class="linkcard">
               <div>📦</div>
               <div>
+                <div><strong>Project Slides</strong></div>
+                <a href="https://docs.google.com/presentation/d/1cssgCBTZ5bfJ6VimBQvfD1-qVC84JLczdNTniFN23PU/edit?usp=sharing" aria-disabled="true" title="available on request">Link</a>
+              </div>
+            </div>
+            <div class="linkcard" style="margin-top:8px;">
+              <div>🗂️</div>
+              <div>
                 <div><strong>Prototype repo</strong></div>
                 <a href="#" aria-disabled="true" title="available on request">Available on request</a>
               </div>
@@ -215,11 +222,11 @@
       </article>
 
       <article class="card case col-12" style="margin-top:12px;">
-        <h3>4) Mixed Reality Viz for Neurological Data (with AbbVie)</h3>
+        <h3>4) Mixed Reality (MR) Viz for Neurological Data (with AbbVie)</h3>
         <p class="sub">Graduate Research Assistant · Unity, C#, HoloLens, API integration</p>
         <div class="grid" style="margin-top:10px;">
           <div class="col-8">
-            <p>Created an MR tool to explore multimodal brain data (MRI, connectome, anatomy). Implemented APIs for real-time data streams and collaborated with industry partners to align with clinical research workflows.</p>
+            <p>Created a Mixed Reality tool to explore multimodal brain data (MRI, connectome, anatomy). Implemented APIs for real-time data streams and collaborated with industry partners to align with clinical research workflows.</p>
             <div class="stack">
               <span class="pill">MR prototyping</span>
               <span class="pill">Data pipelines</span>
@@ -230,8 +237,8 @@
             <div class="linkcard">
               <div>🎥</div>
               <div>
-                <div><strong>Demo (short)</strong></div>
-                <a href="#" aria-disabled="true" title="available on request">Available on request</a>
+                <div><strong>Demo</strong></div>
+                <a href="https://www.youtube.com/watch?v=a_VZmo3ZM4Q" aria-disabled="true" title="available on request">Link</a>
               </div>
             </div>
           </div>
@@ -296,7 +303,9 @@
           <li><em>Winograd Images Dataset</em> — under revise & resubmit at <em>Nature Communications</em>.</li>
           <li>Conference talks & posters on human visual reasoning and scanpath analysis (selected).</li>
         </ul>
-        <p class="sub">Full list & drafts available on request.</p>
+        <p class="sub">
+            Full list & drafts can be found <a href="https://docs.google.com/document/d/1bk6-JY-1GKWll6UnqnOGbhFhkj8WDse4m4-CZdGCVDU/edit?usp=sharing" target="_blank" rel="noopener">here</a>.
+        </p>
       </div>
     </section>
 
