--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
           <span class="chip">Mixed Reality</span>
         </div>
         <div class="kpi">
-          <div class="tile"><b>+ Human vs. Model</b> Benchmarking VLMs on complex social scenes</div>
-          <div class="tile"><b>MR for Clinicians</b> Data viz across MRI & connectome</div>
+          <div class="tile"><b>Humans vs. VLMs</b> Benchmarking VLMs on complex social scenes</div>
+          <div class="tile"><b>Mixed Reality for Clinicians</b> Data viz across MRI & connectome</div>
           <div class="tile"><b>Prosthetic Vision</b> Gaze-contingent simulation & acuity tests</div>
         </div>
       </div>
